tests/ui/nll/user-annotations/method-ufcs-3.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/method-ufcs-3.rs:36:53
   |
LL |     let c = 66;
   |         - binding `c` declared here
LL |     <_ as Bazoom<_>>::method::<&'static u32>(&a, b, &c);
   |     ------------------------------------------------^^-
   |     |                                               |
   |     |                                               borrowed value does not live long enough
   |     argument requires that `c` is borrowed for `'static`
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/method-ufcs-3.rs:43:48
   |
LL | fn annot_reference_named_lifetime<'a>(_d: &'a u32) {
   |                                   -- lifetime `'a` defined here
...
LL |     let c = 66;
   |         - binding `c` declared here
LL |     <_ as Bazoom<_>>::method::<&'a u32>(&a, b, &c);
   |     -------------------------------------------^^-
   |     |                                          |
   |     |                                          borrowed value does not live long enough
   |     argument requires that `c` is borrowed for `'a`
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/method-ufcs-3.rs:57:52
   |
LL | fn annot_reference_named_lifetime_in_closure<'a>(_: &'a u32) {
   |                                              -- lifetime `'a` defined here
...
LL |         let c = 66;
   |             - binding `c` declared here
LL |         <_ as Bazoom<_>>::method::<&'a u32>(&a, b, &c);
   |         -------------------------------------------^^-
   |         |                                          |
   |         |                                          borrowed value does not live long enough
   |         argument requires that `c` is borrowed for `'a`
LL |     };
   |     - `c` dropped here while still borrowed

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
